perf: Improved performance in Folia using MethodHandles